components/platform/schema-registry/base/cilium-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-schema-registry-cnp
  namespace: zylos-infra-kafka
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: schema-registry
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace.labels.zylos.app/namespace-tier": tenant
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: zylos-kafka-connect
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            strimzi.io/cluster: zylos-kafka
            strimzi.io/kind: Kafka
      toPorts:
        - ports:
            - port: "9092"
              protocol: TCP
